--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
-  "name": "universal-data-layer",
+  "name": "universal-data-layer-monorepo",
   "version": "0.0.1",
   "description": "Universal data layer to connect any data source with any framework",
-  "type": "module",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dawidurbanski/caraway-data-layer.git"
+    "turbo": "turbo",
+    "check-types": "tsc --noEmit",
+    "lint": "prettier --check .",
+    "build": "turbo check-types lint build"
   },
   "author": "Dawid Urbanski <hi@dawidurbanski.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/dawidurbanski/caraway-data-layer/issues"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dawidurbanski/universal-data-layer.git"
   },
-  "homepage": "https://github.com/dawidurbanski/caraway-data-layer#readme"
+  "bugs": {
+    "url": "https://github.com/dawidurbanski/universal-data-layer/issues"
+  },
+  "homepage": "https://github.com/dawidurbanski/universal-data-layer#readme",
+  "license": "MIT",
+  "packageManager": "npm@10.8.2",
+  "devDependencies": {
+    "@types/node": "^24.5.2",
+    "prettier": "^3.6.2",
+    "turbo": "^2.5.6",
+    "typescript": "^5.9.2"
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
