--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "turbo": "turbo",
     "check-types": "tsc --noEmit",
     "lint": "prettier --check .",
-    "build": "turbo check-types lint build"
+    "build": "turbo check-types lint build",
+    "dev": "turbo dev"
   },
   "author": "Dawid Urbanski <hi@dawidurbanski.com>",
   "repository": {
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/node": "^24.5.2",
     "prettier": "^3.6.2",
+    "tsc-watch": "^7.1.1",
     "turbo": "^2.5.6",
     "typescript": "^5.9.2"
   },
