--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
-    "skipLibCheck": true,
+    "skipLibCheck": true
   }
 }
