--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,7 @@
   "$schema": "https://turborepo.com/schema.json",
   "tasks": {
     "build": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["^check-types", "^lint", "^build"],
       "outputs": ["dist/**"]
     },
     "check-types": {
@@ -14,6 +14,9 @@
     "dev": {
       "persistent": true,
       "cache": false
+    },
+    "start": {
+      "dependsOn": ["^start"]
     }
   }
 }
