--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -24,5 +24,6 @@
     "declarationMap": true,
     /* If your code doesn't run in the DOM: */
     "lib": ["es2022"]
-  }
+  },
+  "exclude": ["dist", "node_modules", "bin"]
 }
