refactor: Rename check-types to lint:types and add lint:fix command
- Rename check-types to lint:types for consistency
- Add lint:fix command to run prettier --write
- Update turbo.json to use new lint:types task name

--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   },
   "scripts": {
     "turbo": "turbo",
-    "check-types": "tsc --noEmit",
+    "lint:types": "tsc --noEmit",
     "lint": "prettier --check .",
-    "build": "turbo check-types lint build",
+    "lint:fix": "prettier --write .",
+    "build": "turbo lint:types lint build",
     "dev": "turbo dev",
     "start": "turbo start",
     "prepare": "husky"
