--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "turbo": "turbo",
     "lint": "turbo lint",
     "fix": "turbo fix",
-    "build": "turbo fix build",
+    "build": "turbo build",
     "dev": "turbo dev",
     "start": "turbo start",
+    "test": "turbo test",
+    "test:coverage": "turbo test:coverage",
+    "typecheck": "turbo typecheck",
+    "changeset": "changeset",
+    "version": "changeset version && npm install --package-lock-only",
+    "release": "turbo build && changeset publish",
     "prepare": "husky"
   },
   "author": "Dawid Urbanski <hi@dawidurbanski.com>",
@@ -27,10 +33,15 @@
   "license": "MIT",
   "packageManager": "npm@10.8.2",
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.1",
+    "@changesets/cli": "^2.29.7",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.5.2",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "husky": "^9.1.7",
@@ -38,7 +49,8 @@
     "prettier": "^3.6.2",
     "tsc-watch": "^7.1.1",
     "turbo": "^2.5.6",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   },
   "workspaces": [
     "packages/*",
