--- a/packages/contentful/package.json
+++ b/packages/contentful/package.json
@@ -8,6 +8,10 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc-watch",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
+    "test:coverage": "vitest run --coverage",
+    "typecheck": "tsc --noEmit",
     "lint": "npm run lint:formatting && npm run lint:quality && npm run lint:types",
     "lint:formatting": "prettier --check .",
     "lint:quality": "eslint . --config ../../eslint.config.js",
@@ -18,6 +22,14 @@
   },
   "author": "Dawid Urbanski <hi@dawidurbanski.com>",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "dependencies": {},
   "devDependencies": {}
 }
