--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,6 +12,10 @@
     "build": "tsc",
     "dev": "tsc-watch --onSuccess \"node dist/index.js\"",
     "start": "node dist/index.js",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
+    "test:coverage": "vitest run --coverage",
+    "typecheck": "tsc --noEmit",
     "lint": "npm run lint:formatting && npm run lint:quality && npm run lint:types",
     "lint:formatting": "prettier --check .",
     "lint:quality": "eslint . --config ../../eslint.config.js",
@@ -22,6 +26,15 @@
   },
   "author": "Dawid Urbanski <hi@dawidurbanski.com>",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
+  "files": [
+    "dist",
+    "bin",
+    "README.md"
+  ],
   "dependencies": {
     "graphql": "^16.11.0",
     "graphql-http": "^1.22.4",
