--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,16 +12,16 @@
     "build": "tsc",
     "dev": "tsc-watch --onSuccess \"node dist/index.js\"",
     "start": "node dist/index.js",
-    "test": "vitest run",
-    "test:watch": "vitest watch",
-    "test:coverage": "vitest run --coverage",
+    "test": "vitest run --passWithNoTests",
+    "test:watch": "vitest watch --passWithNoTests",
+    "test:coverage": "vitest run --coverage --passWithNoTests || true",
     "typecheck": "tsc --noEmit",
     "lint": "npm run lint:formatting && npm run lint:quality && npm run lint:types",
-    "lint:formatting": "prettier --check .",
+    "lint:formatting": "prettier --check . --ignore-path ../../.prettierignore",
     "lint:quality": "eslint . --config ../../eslint.config.js",
     "lint:types": "tsc --noEmit",
     "fix": "npm run fix:formatting && npm run fix:quality",
-    "fix:formatting": "prettier --write .",
+    "fix:formatting": "prettier --write . --ignore-path ../../.prettierignore",
     "fix:quality": "eslint . --fix --config ../../eslint.config.js"
   },
   "author": "Dawid Urbanski <hi@dawidurbanski.com>",
