build: add test:manual task to turbo configuration
Configure manual testing task as persistent with no caching
to support continuous development testing with example apps

--- a/turbo.json
+++ b/turbo.json
@@ -15,6 +15,10 @@
       "outputs": ["coverage/**"],
       "cache": false
     },
+    "test:manual": {
+      "persistent": true,
+      "cache": false
+    },
     "typecheck": {
       "dependsOn": ["^build"],
       "outputs": []
