fix: create proper test:manual script for framework testing
- Add dedicated test-manual.js script to handle framework argument
- Fix npm run test:manual command to properly accept framework parameter
- Now supports: npm run test:manual nextjs

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "node scripts/start-with-framework.js",
     "test": "turbo test --filter=packages/*",
     "test:coverage": "turbo test:coverage --filter=packages/*",
-    "test:manual": "turbo dev --filter=examples/$npm_config_framework",
+    "test:manual": "node scripts/test-manual.js",
     "typecheck": "turbo typecheck --filter=packages/*",
     "changeset": "changeset",
     "version": "changeset version && npm install --package-lock-only",
