chore: update package dependencies and script commands
- Added 'universal-data-layer' as a dependency in package-lock.json
- Updated build, dev, and start commands in package.json to use new script paths
- Adjusted workspaces configuration in package.json

--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "turbo": "turbo",
     "lint": "turbo lint --filter='./packages/*'",
     "fix": "turbo fix --filter='./packages/*'",
-    "build": "turbo build --filter='./packages/*'",
-    "dev": "node scripts/dev-with-framework.js",
-    "start": "node scripts/start-with-framework.js",
+    "build": "node scripts/build.js",
+    "dev": "node scripts/dev.js",
+    "start": "node scripts/start.js",
     "test": "turbo test --filter='./packages/*'",
     "test:coverage": "turbo test:coverage --filter='./packages/*'",
-    "test:manual": "node scripts/test-manual.js",
     "typecheck": "turbo typecheck --filter='./packages/*'",
     "changeset": "changeset",
     "version": "changeset version && npm install --package-lock-only",
@@ -55,8 +54,9 @@
     "vitest": "^3.2.4"
   },
   "workspaces": [
+    "packages/universal-data-layer",
     "packages/*",
-    "packages/universal-data-layer"
+    "examples/*"
   ],
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
