--- a/packages/contentful/package.json
+++ b/packages/contentful/package.json
@@ -7,7 +7,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc-watch",
+    "dev": "tsc --watch",
+    "start": "node dist/index.js",
     "test": "vitest run --passWithNoTests",
     "test:watch": "vitest watch --passWithNoTests",
     "test:coverage": "vitest run --coverage --passWithNoTests || true",
@@ -30,6 +31,8 @@
     "dist",
     "README.md"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "universal-data-layer": "*"
+  },
   "devDependencies": {}
 }
