--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -2,10 +2,12 @@
   "name": "@examples/nextjs",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "universal-data-layer & next dev --turbopack",
     "build": "next build --turbopack",
-    "start": "next start"
+    "start": "universal-data-layer & next start",
+    "udl": "universal-data-layer"
   },
   "dependencies": {
     "next": "15.5.4",
