fix: update build and start scripts to include universal-data-layer

--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -5,9 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "universal-data-layer & next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "universal-data-layer & next start",
-    "udl": "universal-data-layer"
+    "build": "universal-data-layer & next build --turbopack",
+    "start": "universal-data-layer & next start"
   },
   "dependencies": {
     "next": "15.5.4",
