--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "graphql": "^16.11.0",
     "graphql-http": "^1.22.4",
-    "ruru": "^2.0.0-beta.30"
+    "ruru": "^2.0.0-beta.30",
+    "tsx": "^4.19.2"
   }
 }
