feat: enhance testing and coverage configuration for UDL
- Updated test:coverage command in package.json to use stream UI for better output.
- Excluded coverage directory from TypeScript compilation in tsconfig.json.
- Added vitest configuration file to manage test coverage settings.
- Introduced importMetaResolve utility to facilitate mocking in tests.
- Created integration tests for loader functionality and unit tests for configuration management.

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -26,5 +26,5 @@
     /* If your code doesn't run in the DOM: */
     "lib": ["es2022"]
   },
-  "exclude": ["dist", "node_modules", "bin"]
+  "exclude": ["dist", "node_modules", "bin", "coverage"]
 }
