--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev": "node scripts/dev.js",
     "start": "node scripts/start.js",
     "test": "turbo test --filter='./packages/*'",
-    "test:coverage": "turbo test:coverage --filter='./packages/*'",
+    "test:coverage": "turbo test:coverage --filter='./packages/*' --ui=stream",
     "typecheck": "turbo typecheck --filter='./packages/*'",
     "changeset": "changeset",
     "version": "changeset version && npm install --package-lock-only",
