--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
   },
   "scripts": {
     "turbo": "turbo",
-    "lint": "turbo lint --filter='./packages/*'",
-    "fix": "turbo fix --filter='./packages/*'",
-    "build": "node scripts/build.js",
     "dev": "node scripts/dev.js",
-    "start": "node scripts/start.js",
+    "build": "turbo build --filter='./packages/*'",
+    "start": "turbo start --filter='./packages/*'",
+    "lint": "turbo lint --filter='./packages/*'",
+    "fix": "turbo fix --filter='./packages/*' && turbo fix --filter='./tests/manual'",
     "test": "turbo test --filter='./packages/*'",
     "test:coverage": "turbo test:coverage --filter='./packages/*' --ui=stream",
-    "typecheck": "turbo typecheck --filter='./packages/*'",
+    "typecheck": "turbo typecheck --filter='./packages/*' && turbo typecheck --filter='./tests/manual'",
     "changeset": "changeset",
     "version": "changeset version && npm install --package-lock-only",
     "release": "turbo build --filter='./packages/*' && changeset publish",
     "prepare": "husky",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "eslint": "eslint"
   },
   "author": "Dawid Urbanski <hi@dawidurbanski.com>",
   "repository": {
@@ -43,8 +44,10 @@
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
     "@vitest/coverage-v8": "^3.2.4",
-    "eslint": "^9.36.0",
+    "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^6.1.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.0",
     "prettier": "^3.6.2",
@@ -56,7 +59,8 @@
   "workspaces": [
     "packages/universal-data-layer",
     "packages/*",
-    "examples/*"
+    "examples/*",
+    "tests/manual"
   ],
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
