--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.0",
     "prettier": "^3.6.2",
+    "tsc-alias": "^1.8.16",
     "tsc-watch": "^7.1.1",
     "turbo": "^2.5.8",
     "typescript": "^5.9.2",
