chore: update test configuration and dependencies
- Remove || true from test:coverage script to fail on errors
- Update vitest configs with proper type checking
- Update tsconfig and vite config for manual tests
- Update CI workflow configuration

--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "dev": "node scripts/dev.js",
     "build": "turbo build --filter='./packages/*'",
     "start": "turbo start --filter='./packages/*'",
-    "lint": "turbo lint --filter='./packages/*'",
-    "fix": "turbo fix --filter='./packages/*' && turbo fix --filter='./tests/manual'",
-    "test": "turbo test --filter='./packages/*'",
+    "lint": "turbo lint --filter='./packages/*' --ui=stream",
+    "fix": "turbo fix --filter='./packages/*' && turbo fix --filter='./tests/manual' --ui=stream",
+    "test": "turbo test --filter='./packages/*' --ui=stream",
     "test:coverage": "turbo test:coverage --filter='./packages/*' --ui=stream",
-    "typecheck": "turbo typecheck --filter='./packages/*' && turbo typecheck --filter='./tests/manual'",
+    "typecheck": "turbo typecheck --filter='./packages/*' --ui=stream && turbo typecheck --filter='./tests/manual' --ui=stream",
     "changeset": "changeset",
     "version": "changeset version && npm install --package-lock-only",
-    "release": "turbo build --filter='./packages/*' && changeset publish",
+    "release": "turbo build --filter='./packages/*' && changeset publish --ui=stream",
     "prepare": "husky",
     "prettier": "prettier --write .",
     "eslint": "eslint"
