feat: implement filtering capabilities for GraphQL nodes with codegen
- Added filter input types for String, Int, Float, and Boolean in schema.ts.
- Implemented filtering logic in filterNodes and matchesFilter functions.
- Enhanced createNodeType to support dynamic filter input types based on node fields.
- Updated buildSchema to include filter arguments in GraphQL queries.
- Introduced automatic TypeScript code generation for types, guards, and helpers in JSONPlaceholder Todos demo.
- Created a new plugin for sourcing todos from JSONPlaceholder API.
- Added comprehensive documentation for the JSONPlaceholder Todos feature, including usage examples and generated code structure.
- Updated Vite and TypeScript configurations to support new paths for generated code.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,6 +5,16 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    },
+    "./client": {
+      "types": "./dist/client.d.ts",
+      "import": "./dist/client.js"
+    }
+  },
   "bin": {
     "universal-data-layer": "./bin/cli.js"
   },
