--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -50,6 +50,7 @@
     "graphql": "^16.11.0",
     "graphql-http": "^1.22.4",
     "ruru": "^2.0.0-beta.30",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.2",
+    "zod": "^4.1.13"
   }
 }
