feat: ts-ignore when importing from generated files in manual tests

--- a/turbo.json
+++ b/turbo.json
@@ -17,7 +17,7 @@
       "cache": false
     },
     "typecheck": {
-      "dependsOn": ["build", "^build"],
+      "dependsOn": ["^build"],
       "outputs": []
     },
     "start": {
