feat: remove dependency from typecheck task in turbo.json

--- a/turbo.json
+++ b/turbo.json
@@ -17,8 +17,7 @@
       "cache": false
     },
     "typecheck": {
-      "dependsOn": ["^build"],
-      "outputs": []
+      "dependsOn": []
     },
     "start": {
       "dependsOn": ["^start"]
