--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -3,7 +3,6 @@
   "compilerOptions": {
     "outDir": "./dist",
     "baseUrl": ".",
-    /* Base Options: */
     "esModuleInterop": true,
     "skipLibCheck": true,
     "target": "es2022",
@@ -12,23 +11,19 @@
     "moduleDetection": "force",
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
-    /* Strictness */
     "strict": true,
     "noUncheckedIndexedAccess": true,
     "noImplicitOverride": true,
-    /* If transpiling with TypeScript: */
     "module": "NodeNext",
     "sourceMap": true,
-    /* AND if you're building for a library: */
     "declaration": true,
-    /* AND if you're building for a library in a monorepo: */
     "composite": true,
     "declarationMap": true,
-    /* If your code doesn't run in the DOM: */
     "lib": ["es2022"],
     "paths": {
       "@/*": ["./src/*"]
     }
   },
+  "include": ["src"],
   "exclude": ["dist", "node_modules", "bin", "coverage", "tests/manual"]
 }
