feat(contentful): add Contentful source plugin structure and config

--- a/packages/plugin-source-contentful/tsconfig.json
+++ b/packages/plugin-source-contentful/tsconfig.json
@@ -24,6 +24,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "udl.config.ts"],
   "exclude": ["dist", "node_modules", "bin", "coverage", "tests/manual"]
 }
