test: add unit tests for query utilities and addTypename function
- Implement unit tests for query utilities including `gql`, `query`, and `createQuery` functions.
- Add tests for handling GraphQL queries, fragments, and error scenarios.
- Introduce tests for `addTypenameToDocument` utility to ensure `__typename` is added correctly to queries.

fix(contentful): enhance link field handling in content types

- Update `extractLinkContentTypes` and `parseField` functions to handle cases where validations may be undefined.
- Improve the `createFieldLinkMap` function to accurately map link fields and their possible types.

refactor(entries): enhance entry transformation context

- Modify `EntryTransformContext` to include `fieldLinkMap` for better link type resolution.
- Update `transformLink` and `transformFieldValue` functions to utilize possible types from the field link map.

test(field-link-map): add tests for field link mapping functionality

- Create comprehensive tests for `createFieldLinkMap` to validate link field mappings for various content types and scenarios.

chore(demo): simplify Contentful demo component

- Refactor the Contentful demo component to use `udl.query` for fetching product data.
- Remove unnecessary introspection logic and streamline the display of fetched product data.

--- a/.prettierignore
+++ b/.prettierignore
@@ -4,11 +4,15 @@ node_modules/
 # Build outputs
 dist/
 build/
+generated/
 .next/
 .nuxt/
 .output/
 .data/
 .cache/
+
+# Cache
+.udl-cache/
 
 # Coverage reports
 coverage/
