--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,15 +37,8 @@ jobs:
       - name: Run type checking
         run: npm run typecheck
 
-      - name: Run tests with coverage
-        run: npm run test:coverage
-
-      - name: Upload coverage reports
-        if: matrix.node-version == '20.x' && github.event_name == 'pull_request'
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: coverage/
+      - name: Run tests
+        run: npm run test
 
   validate-changesets:
     name: Validate Changesets
