feat: integrate MSW for mocking API calls in development
- Added `msw` as a dev dependency in core and plugin-source-contentful packages.
- Implemented mock server setup in core to intercept API calls during development.
- Created mock handlers for JSONPlaceholder API in core.
- Developed Contentful mock handlers and fixtures in plugin-source-contentful.
- Updated server start logic to initialize mock server in non-production environments.
- Enhanced manual tests to utilize mocked data for Contentful.
- Updated TypeScript configurations to include necessary files for compilation.

--- a/examples/nextjs/tsconfig.json
+++ b/examples/nextjs/tsconfig.json
@@ -19,7 +19,13 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@udl/plugin-source-contentful": [
+        "../../packages/plugin-source-contentful/dist"
+      ],
+      "@udl/plugin-source-contentful*": [
+        "../../packages/plugin-source-contentful/dist/*"
+      ]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
