--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -12,17 +12,20 @@
     "udl": "NODE_ENV=production universal-data-layer"
   },
   "dependencies": {
+    "@udl/plugin-source-contentful": "*",
     "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "universal-data-layer": "*",
-    "@udl/plugin-source-contentful": "*"
+    "universal-data-layer": "*"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^22.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "msw": "^2.7.0",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.7.0"
   }
 }
