--- a/packages/plugin-source-contentful/package.json
+++ b/packages/plugin-source-contentful/package.json
@@ -10,6 +10,10 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
     },
+    "./mocks": {
+      "types": "./dist/src/mocks/index.d.ts",
+      "import": "./dist/src/mocks/index.js"
+    },
     "./package.json": "./package.json"
   },
   "scripts": {
@@ -43,6 +47,7 @@
     "universal-data-layer": "^0.1.0"
   },
   "devDependencies": {
+    "msw": "^2.7.0",
     "universal-data-layer": "^0.1.0"
   }
 }
