--- a/packages/plugin-source-contentful/tsconfig.json
+++ b/packages/plugin-source-contentful/tsconfig.json
@@ -24,5 +24,6 @@
       "@/*": ["./src/*"]
     }
   },
+  "include": ["src/**/*.ts", "src/**/*.json", "*.ts"],
   "exclude": ["dist", "node_modules", "bin", "coverage", "tests/manual"]
 }
