--- a/packages/codegen-typed-queries/package.json
+++ b/packages/codegen-typed-queries/package.json
@@ -1,32 +1,22 @@
 {
-  "name": "universal-data-layer",
-  "version": "0.1.0",
-  "description": "Core library for the Universal Data Layer project",
+  "name": "@udl/codegen-typed-queries",
+  "version": "0.1.0-beta.1",
+  "description": "TypedDocumentNode query generation extension for Universal Data Layer (experimental)",
   "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+      "types": "./dist/src/index.d.ts",
+      "import": "./dist/src/index.js"
     },
-    "./client": {
-      "types": "./dist/client.d.ts",
-      "import": "./dist/client.js"
-    }
-  },
-  "bin": {
-    "universal-data-layer": "./bin/cli.js",
-    "udl-codegen": "./bin/codegen.js"
+    "./package.json": "./package.json"
   },
   "scripts": {
     "build": "tsc && tsc-alias",
-    "dev": "node ./bin/cli.js & tsc --watch & tsc-alias --watch",
-    "start": "node ./bin/cli.js",
-    "codegen": "node ./bin/codegen.js",
+    "dev": "tsc --watch",
     "test": "vitest run --passWithNoTests",
     "test:watch": "vitest watch --passWithNoTests",
-    "test:coverage": "vitest run --coverage",
     "lint": "npm run lint:formatting && npm run lint:quality && npm run lint:types",
     "lint:formatting": "prettier --check . --ignore-path ../../.prettierignore",
     "lint:quality": "eslint . --config ../../eslint.config.js",
@@ -44,22 +34,17 @@
   },
   "files": [
     "dist",
-    "bin",
     "README.md"
   ],
   "dependencies": {
-    "@graphql-typed-document-node/core": "^3.2.0",
-    "chokidar": "^4.0.3",
-    "dotenv": "^17.2.3",
-    "graphql": "^16.11.0",
-    "graphql-http": "^1.22.4",
-    "pluralize": "^8.0.0",
-    "ruru": "^2.0.0-beta.30",
-    "tsx": "^4.19.2",
-    "zod": "^4.1.13"
+    "@graphql-typed-document-node/core": "^3.2.0"
+  },
+  "peerDependencies": {
+    "graphql": "^16.0.0",
+    "universal-data-layer": "^0.1.0"
   },
   "devDependencies": {
-    "@types/pluralize": "^0.0.33",
-    "msw": "^2.7.0"
+    "graphql": "^16.11.0",
+    "universal-data-layer": "^0.1.0"
   }
 }
