feat: update Contentful plugin with reference system integration
- Clone possibleTypes array to prevent shared reference issues
- Add ./generated export path for generated types
- Configure codegen with typed-queries extension in udl.config

--- a/packages/plugin-source-contentful/package.json
+++ b/packages/plugin-source-contentful/package.json
@@ -10,6 +10,10 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
     },
+    "./generated": {
+      "types": "./generated/index.ts",
+      "import": "./generated/index.js"
+    },
     "./mocks": {
       "types": "./dist/src/mocks/index.d.ts",
       "import": "./dist/src/mocks/index.js"
