feat: update Next.js example with typed queries and minor fixes
- Add products.graphql with typed query definitions
- Update pages to use generated typed queries
- Simplify component props with inline interfaces
- Add no-redeclare rule for TypeScript overloads in ESLint
- Fix import paths to remove .js extensions in generated code
- Improve Contentful reference type inference with possibleTypes

--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -12,6 +12,7 @@
     "udl": "universal-data-layer"
   },
   "dependencies": {
+    "@udl/codegen-typed-queries": "*",
     "@udl/plugin-source-contentful": "*",
     "next": "^15.1.0",
     "react": "^19.0.0",
