refactor: rename package scope from @udl to @universal-data-layer
Update all package names and references across the codebase:
- @udl/codegen-typed-queries → @universal-data-layer/codegen-typed-queries
- @udl/plugin-source-contentful → @universal-data-layer/plugin-source-contentful
- @udl/example-nextjs → @universal-data-layer/example-nextjs

Updated files include package.json, tsconfig.json, source code,
documentation, tests, and changesets.

--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@udl/example-nextjs",
+  "name": "@universal-data-layer/example-nextjs",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -12,8 +12,8 @@
     "udl": "universal-data-layer"
   },
   "dependencies": {
-    "@udl/codegen-typed-queries": "*",
-    "@udl/plugin-source-contentful": "*",
+    "@universal-data-layer/codegen-typed-queries": "*",
+    "@universal-data-layer/plugin-source-contentful": "*",
     "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
