chore: exclude internal and example packages from versioning
Mark docs, manual-tests, and example-nextjs as private with static
version 0.0.0. Add these packages to changeset ignore list and remove
their mentions from existing changeset files.

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -10,5 +10,9 @@
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": []
+  "ignore": [
+    "@universal-data-layer/manual-tests",
+    "@universal-data-layer/example-nextjs",
+    "universal-data-layer-docs"
+  ]
 }
