--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -12,7 +12,6 @@
   "updateInternalDependencies": "patch",
   "ignore": [
     "@universal-data-layer/manual-tests",
-    "@universal-data-layer/example-nextjs",
-    "universal-data-layer-docs"
+    "@universal-data-layer/example-nextjs"
   ]
 }
