--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -10,9 +10,5 @@
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": [
-    "@universal-data-layer/manual-tests",
-    "@universal-data-layer/example-nextjs",
-    "universal-data-layer-docs"
-  ]
+  "ignore": []
 }
