--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -12,12 +12,12 @@
     "udl": "universal-data-layer"
   },
   "dependencies": {
-    "@universal-data-layer/codegen-typed-queries": "*",
-    "@universal-data-layer/plugin-source-contentful": "*",
+    "@universal-data-layer/codegen-typed-queries": "file:../../packages/codegen-typed-queries",
+    "@universal-data-layer/plugin-source-contentful": "file:../../packages/plugin-source-contentful",
     "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "universal-data-layer": "*"
+    "universal-data-layer": "file:../../packages/universal-data-layer"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^16.0.6",
