ci: skip changeset validation on release PR
The release PR from changeset-release/main contains version bumps
that don't need changesets since they are the result of consuming them.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
   validate-changesets:
     name: Validate Changesets
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+    if: github.event_name == 'pull_request' && github.head_ref != 'changeset-release/main'
 
     steps:
       - name: Checkout repository
