--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,20 @@
 {
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
-    "module": "nodenext",
-    "target": "esnext",
+    "module": "NodeNext",
+    "target": "es2022",
+    "lib": ["es2022"],
+
+    // Module Resolution
+    "esModuleInterop": true,
+    "allowJs": true,
+    "resolveJsonModule": true,
 
     // Other Outputs
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
+    "composite": true,
 
     // Stricter Typechecking Options
     "noUncheckedIndexedAccess": true,
