feat: add unified coverage reporting with cross-package navigation
Add scripts to generate a consolidated coverage index page and inject
navigation between package coverage reports. The test:coverage command
now automatically generates these reports after running tests.

- generate-coverage-index.js: Creates root index with package summaries
- inject-coverage-nav.js: Adds navigation bar to each package report

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,10 @@
 
 node_modules
 dist
-coverage
+# Coverage reports (except root index)
+coverage/*
+!coverage/index.html
+packages/*/coverage/
 .nyc_output
 *.log
 .env
