chore: add tests/manual to workspaces and changeset ignore
Include the manual tests package in npm workspaces and exclude it from
changeset versioning since it's for internal testing only.

--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
   },
   "workspaces": [
     "packages/universal-data-layer",
-    "packages/*"
+    "packages/*",
+    "tests/manual"
   ],
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
