--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -7,5 +7,12 @@
       "@/*": ["./src/*"]
     }
   },
-  "exclude": ["dist", "node_modules", "bin", "coverage", "tests/manual"]
+  "exclude": [
+    "dist",
+    "node_modules",
+    "bin",
+    "coverage",
+    "tests",
+    "vitest.config.ts"
+  ]
 }
