--- a/packages/codegen-typed-queries/tsconfig.json
+++ b/packages/codegen-typed-queries/tsconfig.json
@@ -7,5 +7,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "exclude": ["dist", "node_modules", "bin", "coverage", "tests/manual"]
+  "exclude": ["dist", "node_modules", "bin", "coverage", "tests"]
 }
