--- a/packages/codegen-typed-queries/package.json
+++ b/packages/codegen-typed-queries/package.json
@@ -47,6 +47,6 @@
   },
   "devDependencies": {
     "graphql": "^16.11.0",
-    "universal-data-layer": "^1.0.0"
+    "universal-data-layer": "*"
   }
 }
