--- a/packages/codegen-typed-queries/tsconfig.json
+++ b/packages/codegen-typed-queries/tsconfig.json
@@ -2,10 +2,18 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
+    "noEmit": false,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
   },
-  "exclude": ["dist", "node_modules", "bin", "coverage", "tests"]
+  "exclude": [
+    "dist",
+    "node_modules",
+    "bin",
+    "coverage",
+    "tests",
+    "vitest.config.ts"
+  ]
 }
