--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,8 @@ jobs:
 
       - name: Run type checking
         run: npm run typecheck
+        env:
+          UDL_USE_MOCKS: 'true'
 
       - name: Run tests
         run: npm run test
