--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "build": "tsc && tsc-alias",
-    "dev": "NODE_ENV=development node ./bin/cli.js & tsc --watch & tsc-alias --watch",
+    "dev": "node ./bin/cli.js & tsc --watch & tsc-alias --watch",
     "start": "node ./bin/cli.js",
     "codegen": "node ./bin/codegen.js",
     "test": "vitest run --passWithNoTests",
