--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,7 @@
 node_modules
 dist
 # Coverage reports (except root index)
-coverage
-coverage/*
+coverage/index.html
 packages/*/coverage/
 .nyc_output
 *.log
