--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -59,10 +59,12 @@
     "pluralize": "^8.0.0",
     "ruru": "^2.0.0-beta.30",
     "tsx": "^4.19.2",
+    "ws": "^8.18.3",
     "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/pluralize": "^0.0.33",
+    "@types/ws": "^8.18.1",
     "msw": "^2.7.0"
   }
 }
