refactor: move cache storage from .udl-cache to .udl/cache
Restructure cache directory to use `.udl/` as a parent directory for
all internal UDL files. This allows future expansion for storing other
library internals (logs, state, etc.) while keeping a single directory
to gitignore.

- Update FileCacheStorage to use .udl/cache/nodes.json
- Update FileSyncTokenStorage to use .udl/cache/contentful-sync-tokens.json
- Update all gitignore, prettierignore, and eslint ignore patterns
- Update documentation to reflect new paths
- Update all related tests

--- a/examples/nextjs/.gitignore
+++ b/examples/nextjs/.gitignore
@@ -10,8 +10,8 @@ out/
 .env.local
 .env.*.local
 
-# Cache
-.udl-cache/
+# UDL (cache and other internal files)
+.udl/
 
 # TypeScript
 *.tsbuildinfo
